# jetson_stats

./: .buildinfo  .dockerignore  .gitignore  .travis.yml  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  MELLANOX_FIX_SUMMARY.md  MELLANOX_IMPLEMENTATION_SUMMARY.md  MELLANOX_TEMP_README.md  README.md  SECURITY.md  advanced-usage.html  contributing.html  debug_thor_frequency.py  docker.html  genindex.html  index.html  install.sh  install_jetson_easy.sh  install_jetson_stats.sh  install_jtop_torun_without_sudo.sh  jetson_env.bash  jetson_performance.service  jetson_performance.sh  jetson_swap.sh  jetson_variables  jtop.html  jtop.py  jtop.sh  jtop_debug.py  jtop_debug_to_file.py  modules.html  nosudo.html  objects.inv  py-modindex.html  pyproject.toml  (+26 more)
.doctrees/: advanced-usage.doctree  contributing.doctree  docker.doctree  environment.pickle  index.doctree  jtop.doctree  modules.doctree  nosudo.doctree  reference.doctree  sponsors.doctree  troubleshooting.doctree
.doctrees/__intersphinx_cache__/: python_objects.inv
.doctrees/jtop/: how_is_it_works.doctree  jtop.doctree
.doctrees/other-tools/: environment_variables.doctree  index.doctree  jetson_config.doctree  jetson_release.doctree  jetson_swap.doctree
.doctrees/reference/: exceptions.doctree  fan.doctree  gpu.doctree  index.doctree  jetson_clocks.doctree  jtop.doctree  memory.doctree  nvpmodel.doctree
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: board-missing.md  bug-report.md  config.yml  engine-gui.md  hardware-missing.md  jetpack-missing.md  model-missing.md
.github/PULL_REQUEST_TEMPLATE/: jetpack-missing.md
.github/workflows/: auto-merge-dependabot.yml  auto-merge-jetpack.yml  build-and-push.yml  build.yml  dependabot-approve-and-auto-merge.yml  docs.yml  publish.yml  pythonapp.yml
_sources/: contributing.rst.txt  docker.rst.txt  index.rst.txt  jtop.rst.txt  reference.rst.txt  troubleshooting.rst.txt
_sources/jtop/: how_is_it_works.rst.txt  jtop.rst.txt
_sources/other-tools/: jetson_release.rst.txt  jetson_swap.rst.txt
_sources/reference/: exceptions.rst.txt  jtop.rst.txt  memory.rst.txt  nvpmodel.rst.txt
_static/: copybutton.js  documentation_options.js  pygments.css
docs/: Makefile  advanced-usage.rst  conf.py  contributing.rst  docker.rst  index.rst  jtop.rst  make.bat  nosudo.rst  reference.rst  requirements.txt  sponsors.rst  thor_podgov_tuning.rst  troubleshooting.rst
docs/_templates/: base.html  layout.html
docs/_templates/sidebar/: adsense.html
docs/jtop/: how_is_it_works.rst  jtop.rst
docs/other-tools/: environment_variables.rst  index.rst  jetson_config.rst  jetson_release.rst  jetson_swap.rst
docs/reference/: fan.rst  gpu.rst  index.rst  jetson_clocks.rst  jtop.rst
docs/source/: conf.py  modules.rst
examples/: jtop_callback.py  jtop_control.py  jtop_cpu.py  jtop_engines.py  jtop_fan.py  jtop_flask_server.py  jtop_hardware.py  jtop_logger.py  jtop_memory.py  jtop_processes.py  jtop_properties.py  jtop_server.py  log_data.py  quick_read.py
jetson/: install_jetson_easy.sh  jetson_performance.sh  jetson_release.sh  jetson_swap  jetson_variables  jetson_variables.sh  uninstall_jetson_easy.sh
jtop/: __init__.py  __main__.py  common.py  github.py  how_is_it_works.html  jetson_config.py  jetson_libraries  jetson_release.py  jetson_swap.py  jetson_test.ipynb  jetson_variables  jetsonstats.py  jstatslib.py  jtop.html  jtop.old.py  jtop.py  jtopgui.py  jtopguilib.py  jtopguimenu.py  jtoplib.py  service.py  terminal_colors.py
jtop/core/: __init__.py  bpmp.py  command.py  common.py  config.py  cpu.py  engine.py  exceptions.py  fan.py  gpu.py  hardware.py  hw_detect.py  jetson_clock.py  jetson_clocks.py  jetson_l4t.py  jetson_libraries.py  jetson_variables.py  jetsonpower_provider.py  memory.py  nvpmodel.py  power.py  process_types.py  processes.py  service.py  swap.py  tegra_parse.py  tegrastats.py  temperature.py  thor_cuda_mem.py  thor_gpu.py  thor_power.py  timer_reader.py
jtop/gui/: __init__.py  button.py  chart.py  jtopgui.py  jtopguiconfig.py  jtopguilib.py  jtopguimenu.py  page_all_info.py  page_control.py  page_gpu.py  page_variables.py  pall.py  pcontrol.py  pcpu.py  pengine.py  pgpu.py  pgpu_thor.py  pinfo.py  pmem.py
jtop/gui/lib/: __init__.py  button.py  chart.py  colors.py  common.py  dialog_window.py  linear_gauge.py  process_table.py  (+1 more)
jtop/tests/: __init__.py  common.py  conftest.py  marco_functions.py  test_00_service.py  test_01_outputs.py  test_02_fan.py  test_03_jetson_clocks.py  test_04_nvpmodel.py  test_05_gui.py  test_env.py  test_fan.py  test_gui.py  test_jetson_clocks.py  test_jtop.py  test_nvpmodel.py  test_service.py
jtop/tests_gui/: __init__.py  test_chart.py  test_gui_page.py  test_linear_gauge.py  test_process_table.py
other-tools/: environment_variables.html  index.html  jetson_config.html  jetson_release.html  jetson_swap.html
reference/: exceptions.html  fan.html  gpu.html  index.html  jetson_clocks.html  jtop.html  memory.html  nvpmodel.html
scripts/: develop.sh  install.sh  install_jtop_from_sdist.sh  install_jtop_torun_without_sudo.sh  jetson-performance.sh  jetson-release  jetson_config  jetson_docker  jetson_env.sh  jetson_fan.service  jetson_fan.sh  jetson_performance.service  jetson_performance.sh  jetson_release  jetson_swap  jetson_variables  jtop_env  jtop_env.sh  upgrade-jtop.sh
services/: jetson_env.sh  jetson_fan.service  jetson_fan.sh  jetson_performance.service  jetson_performance.sh  jetson_stats.py  jetson_stats.service  jetson_stats_boot.service  jtop.service
tests/: Dockerfile.sphinx  Dockerfile.tox  __init__.py  develop.sh  jetson_clock  jetson_clocks  local_test.sh  nvfancontrol  nvfancontrol.conf  nvfancontrol.service  nvpmodel  service_analyze.py  service_profile.py  systemctl  tegrastats  test_env.py  test_fan.py  test_gui.py  test_jetson_clocks.py  test_jtop.py  test_nvpmodel.py  test_simple.py  test_tegrastats.py
tests/fan/: pwm_rpm_table
visualization/: Dockerfile  plots.py  requirements.txt
