[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jetson-stats"
# Version is read dynamically from jtop/__init__.py
dynamic = ["version"]
authors = [
  { name="Raffaello Bonghi", email="raffaello@rnext.it" },
]
description = "Interactive system-monitor and process viewer for all NVIDIA Jetson [Orin, Xavier, Nano, TX] series"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=2.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Hardware",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Operating System",
    "Topic :: System :: Operating System Kernels",
    "Topic :: System :: Shells",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Unix Shell",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
]
keywords = [
    "jetson_stats", "jtop", "python", "system-monitor", "docker",
    "nvidia", "Jetson", "Orin", "AGXOrin", "Xavier", "AGXXavier", "XavierNX",
    "Nano", "TX1", "TX2", "process", "viewer",
]
# Dependencies from requirements.txt
dependencies = [
    "smbus2",
    "distro",
]

[project.urls]
Documentation = "https://rnext.it/jetson_stats"
Funding = "https://github.com/sponsors/rbonghi"
"Say Thanks!" = "https://discord.gg/BFbuJNhYzS"
Source = "https://github.com/rbonghi/jetson_stats"
Tracker = "https://github.com/rbonghi/jetson_stats/issues"
Examples = "https://github.com/rbonghi/jetson_stats/tree/master/examples"

[project.scripts]
jtop = "jtop.__main__:main"
jetson_release = "jtop.jetson_release:main"
jetson_config = "jtop.jetson_config:main"
jetson_swap = "jtop.jetson_swap:main"

[project.optional-dependencies]
docs = [
    "sphinx>3.0.0",
    "requests",
    "furo",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinxext-opengraph",
    "numpy>=1.22.2",
    "tornado>=6.4.2",
    "pillow>=10.3.0",
    "fonttools>=4.43.0",
    "zipp>=3.19.1",
]
test = [
    "check-manifest==0.41",
    "flake8",
    "pytest",
]

[tool.setuptools]
packages = {find = {exclude = ["examples*", "scripts*", "tests*", "jtop.tests*", "jtop.tests_gui*"]}}
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "jtop.__version__"}
